# WaveSign

./: .gitignore  AGENT_BIOMETRIC_ID.md  EVALUATION.md  LICENSE  README.md  SCALABILITY.md  app.py  requirements.txt  wavesign_api_bench.py  wavesign_api_demo.py  wavesign_eval.py  wavesign_scale.py
docker_api/: Dockerfile  main.py  pdf_utils.py  requirements.txt
paper/: KNOWLEDGE_BASE.md  PAPER.md
waveid-project/: .gitignore  LICENSE  README.md  pyproject.toml
waveid-project/tests/: test_biometric.py  test_credential.py  test_enrollment.py  test_wavesign.py
waveid-project/waveid/: __init__.py  auth.py  authority.py  biometric.py  challenge.py  credential.py  verifier.py  wavesign.py
