[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waveid"
version = "0.1.0"
description = "Agent Biometric Identification — computational fingerprints for AI agents, powered by WaveSign"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WaveSign Team" },
]
keywords = ["ai", "agents", "identity", "biometrics", "authentication", "wavesign"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.urls]
Homepage = "https://github.com/roloport/WaveID"
Repository = "https://github.com/roloport/WaveID"

[tool.pytest.ini_options]
testpaths = ["tests"]
